--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <link rel="stylesheet" href="assets/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/fontawesome/css/all.min.css">
@@ -75,37 +74,37 @@
     </header>
 
     <!-- slider -->
-    <!-- <div class="row" style="overflow-x: hidden;">
-        <div class="col-lg-8 col-11 m-auto" style="overflow-x: hidden;"> -->
-    <div id="carouselExampleDark" class="carousel carousel-white slide mt_20" data-bs-ride="carousel">
-        <div class="carousel-indicators">
-            <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-            <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
-            <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
-        </div>
-        <div class="carousel-inner">
-            <div class="carousel-item active" data-bs-interval="10000">
-                <img src="assets/images/slider/gambar1.png" class="d-block w-100" alt="...">
-            </div>
-            <div class="carousel-item" data-bs-interval="2000">
-                <img src="assets/images/slider/gambar2.png" class="d-block w-100" alt="...">
-            </div>
-            <div class="carousel-item">
-                <img src="assets/images/slider/gambar1.png" class="d-block w-100" alt="...">
+    <div class="row" style="overflow-x: hidden;">
+        <div class="col-lg-8 col-11 m-auto" style="overflow-x: hidden;">
+            <div id="carouselExampleDark" class="carousel carousel-white slide mt_20" data-bs-ride="carousel">
+                <div class="carousel-indicators">
+                    <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                    <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                    <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                </div>
+                <div class="carousel-inner">
+                    <div class="carousel-item active" data-bs-interval="10000">
+                        <img src="assets/images/slider/gambar1.png" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item" data-bs-interval="2000">
+                        <img src="assets/images/slider/gambar2.png" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="assets/images/slider/gambar1.png" class="d-block w-100" alt="...">
+                    </div>
+                </div>
             </div>
         </div>
     </div>
-    <!-- </div>
-    </div> -->
     <!-- end slider -->
 
     <!-- main content -->
-    <!-- <div class="row mt-5">
+    <div class="row mt-5">
         <div class="col-lg-11 col-md-11 col-sm-11 col-11 m-auto mb-2">
             <h4 class="text-white"><b>Game PC</b></h4>
-            <div class="row"> -->
-    <!-- card menu -->
-    <!-- <div class="col-lg-2 md-col-4 col-4 col-sm-4">
+            <div class="row">
+                <!-- card menu -->
+                <div class="col-lg-2 md-col-4 col-4 col-sm-4">
                     <a href="cekOut.html" class="text_Dnone">
                         <div class="card shadow-lg mb-5 text-start bg-dark border-0 ">
                             <img class="card-img-top" src="assets/images/item/ml.png" alt="Title">
@@ -114,17 +113,17 @@
                             </div>
                         </div>
                     </a>
-                </div> -->
-    <!-- </div>
+                </div>
+            </div>
         </div>
     </div>
 
     <div class="row mt-5">
         <div class="col-lg-11 col-md-11 col-sm-11 col-11 m-auto mb-2">
             <h4 class="text-white"><b>Game PC</b></h4>
-            <div class="row"> -->
-    <!-- card menu -->
-    <!-- <div class="col-lg-2 md-col-4 col-4 col-sm-4">
+            <div class="row">
+                <!-- card menu -->
+                <div class="col-lg-2 md-col-4 col-4 col-sm-4">
                     <a href="cekOut.html" class="text_Dnone">
                         <div class="card shadow-lg mb-5 text-start bg-dark border-0 ">
                             <img class="card-img-top" src="assets/images/item/ml.png" alt="Title">
@@ -133,17 +132,17 @@
                             </div>
                         </div>
                     </a>
-                </div> -->
-    <!-- </div>
+                </div>
+            </div>
         </div>
     </div>
 
     <div class="row mt-5">
         <div class="col-lg-11 col-md-11 col-sm-11 col-11 m-auto mb-2">
             <h4 class="text-white"><b>Others</b></h4>
-            <div class="row"> -->
-    <!-- card menu -->
-    <!-- <div class="col-lg-2 md-col-4 col-4 col-sm-4">
+            <div class="row">
+                <!-- card menu -->
+                <div class="col-lg-2 md-col-4 col-4 col-sm-4">
                     <a href="cekOut.html" class="text_Dnone">
                         <div class="card shadow-lg mb-5 text-start bg-dark border-0 ">
                             <img class="card-img-top" src="assets/images/item/ml.png" alt="Title">
@@ -152,21 +151,21 @@
                             </div>
                         </div>
                     </a>
-                </div> -->
-    <!-- </div>
+                </div>
+            </div>
         </div>
     </div>
 
     <div class="row mt-5">
-        <div class="col-lg-11 col-md-11 col-sm-11 col-11 m-auto mb-2"> -->
-    <!-- <nav class="navbar shadow-lg mb-5 bg-body rounded">
+        <div class="col-lg-11 col-md-11 col-sm-11 col-11 m-auto mb-2">
+            <nav class="navbar shadow-lg mb-5 bg-body rounded">
                 <div class="container-fluid">
                     <h5 class="mt-1 font_12">Diskon hingga 50% untuk hari ini</h5>
                 </div>
-            </nav> -->
-    <!-- <div class="row"> -->
-    <!-- card promo -->
-    <!-- <div class="col-lg-3 md-col-6 col-10 col-sm-10 m_auto mb-5">
+            </nav>
+            <div class="row">
+                <!-- card promo -->
+                <div class="col-lg-3 md-col-6 col-10 col-sm-10 m_auto mb-5">
                     <a href="cekOut.html" style="text-decoration: none;">
                         <div class="card border-primary m_min_f">
                             <img class="card-img-top" src="assets/images/item/Penipuan.jpg" alt="Title">
@@ -176,13 +175,13 @@
                             </div>
                         </div>
                     </a>
-                </div> -->
-    <!-- </div>
+                </div>
+            </div>
         </div>
-    </div> -->
+    </div>
     <!-- end main content -->
 
-    <!-- <footer>
+    <footer>
         <div class="row mt-5">
             <div class="col-lg-11 col-md-11 col-sm-11 col-11 m-auto mb-2 bg-dark p-4">
                 <h2 class="text-white font_16"><b>GameShop APP</b></h2>
@@ -201,7 +200,7 @@
                 </div>
             </div>
         </div>
-    </footer> -->
+    </footer>
 
     <script src="assets/dist/js/bootstrap.bundle.min.js"></script>
     <script src="assets/fontawesome/js/all.min.js"></script>
